<resources>
    <string name="app_name" translatable="false">SplitBills</string>

    <string name="no_groups_added">Add a group</string>
    <string name="no_groups_all">No group added</string>
    <string name="successfully_saved_group_message">Group saved</string>
    <string name="successfully_added_group_message">Group added</string>
    <string name="successfully_deleted_group_message">Group was deleted</string>

    <string name="group_name">Group name</string>
    <string name="enter_group_name_hint">Enter a group name</string>
    <string name="group_members">Group members</string>
    <string name="add_group_member">+ Add person to group</string>
    <string name="save">Save</string>

    <string name="add_group">+ Add a new group</string>
    <string name="total_balance">Total balance</string>

    <string name="frag_add_edit_group_edit_group">Edit Group</string>
    <string name="frag_add_edit_group_add_group">New Group</string>

    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="email">E-mail</string>
    <string name="enter_email">Enter e-mail</string>

    <string name="frag_add_member_create_profile">Create profile</string>
    <string name="frag_add_member_add_member">Add member</string>

    <string name="bill_description">Bill description</string>
    <string name="date">Date</string>

    <string name="no_group_name_message">Enter a group name</string>
    <string name="no_name_given">Enter a name</string>
    <string name="no_email_given">Enter a e-mail address</string>
    <string name="member_successful_added">Member added</string>
    <string name="member_already_added">Member already added</string>
    <string name="add_at_least_one_member">Add at least one member</string>
    <string name="choose_group">Choose a group</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="empty_amount">0.00</string>
    <string name="who_paid">Who paid the bill</string>
    <string name="who_owes">Split bill between</string>
    <string name="between">between</string>
    <string name="add_member">+ Add member from group</string>
    <string name="no_bills_all">No bill added</string>
    <string name="debtor_already_added">Member already added</string>
    <string name="no_bill_description_message">Enter a description</string>
    <string name="no_bill_amount_message">Enter a amount</string>
    <string name="frag_add_edit_bill_edit_bill">Edit Bill</string>
    <string name="frag_add_edit_bill_add_bill">New Bill</string>
    <string name="alert_dialog_creditor_title">Choose Creditor</string>
    <string name="alert_dialog_debtor_title">Add Debtor</string>
    <string name="settings">Settings</string>
    <string name="view_balances">Balances</string>
    <string name="remove">Remove</string>
    <string name="import_group">Import</string>
    <string name="share_group">Share</string>
    <string name="trying_to_merge">Trying to import group</string>
    <string name="merged_group">Group imported</string>
    <string name="added_group">Added new group</string>
    <string name="could_not_add_group">Could not add group</string>
    <string name="add_bill_to">Add bill to</string>
    <string name="welcome_to_splitbills">Welcome to SplitBills</string>
    <string name="welcome_text">Before you can start, you need to add yourself as a user. Your name and e-mail address will only be saved on your device.</string>
    <string name="okay">Okay</string>
    <string name="could_not_merge_no_group">Could not merge group, no valid xml file</string>
    <string name="could_not_merge_group_io_error">Could not merge group, IO error</string>
    <string name="you_are_settled_up">You are settled up</string>
    <string name="you_are_settled_up_strike_through"><strike>You are settled up</strike></string>
    <string name="you_get">You get %s %s</string>
    <string name="you_owe">You owe %s %s</string>
    <string name="member_paid">%s paid %s %s</string>
    <string name="member_paid_strike_through"><strike>%s paid %s %s</strike></string>
    <string name="you_lent">You lent %s %s</string>
    <string name="you_lent_strike_through"><strike>You lent %s %s</strike></string>
    <string name="you_borrowed">You borrowed %s %s</string>
    <string name="you_borrowed_strike_through"><strike>You borrowed %s %s</strike></string>
    <string name="strike_through"><strike>%s</strike></string>
    <string name="member_is_settled_up"><b>%s</b> is settled up</string>
    <string name="member_gets"><![CDATA[<b>%s</b> gets <b>%s %s</b>]]></string>
    <string name="member_owes"><![CDATA[<b>%s</b> owes <b>%s %s</b>]]></string>
    <string name="member_owes_member"><![CDATA[<b>%s</b> owes <b>%s</b> <b>%s %s</b>]]></string>
    <string name="member_gets_member"><![CDATA[<b>%s</b> gets <b>%s %s</b> from <b>%s</b>]]></string>
    <string name="one_debtor_should_be_added">Add at least one debtor</string>
    <string name="email_subject">Updates in SplitBills from %s</string>
    <string name="email_content">Hi,  there were some updates in %s. To merge the updates, open the file in the appendix with SplitBills.</string>
    <string name="error">Error</string>
    <string name="merging_group">Importing group</string>
    <string name="exporting_group">Exporting group</string>
    <string name="import_group_hint">If you get a file with the ending .sbgrb from a friend, you can press this button and import then import the file. The contents of the file will be merged with your groups.</string>
    <string name="share_group_hint">Click here to share this group with the members of this group. The other members can than import the group on their devices. With that, you can sync your expenses with the other members. You may want to do this every time you add a new bill.</string>
    <string name="bill_saved">Bill saved</string>
    <string name="really_remove_group">Really remove this group? All bills will be lost.</string>
    <string name="remove_group">Remove group</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="really_remove_bill">Really remove this bill?</string>
    <string name="remove_bill">Remove bill</string>
    <string name="paid_by_on">Paid by %s on %s</string>
    <string name="split_details">Split details</string>
    <string name="creditor_paid"><![CDATA[<b>%s</b> paid <b>%s %s</b>]]></string>
    <string name="member_borrowed"><![CDATA[<b>%s</b> borrowed <b>%s %s</b>]]></string>
    <string name="share_group_intent">Share group</string>
    <string name="your_real_name">Your real name</string>
    <string name="your_email_address">Your email address</string>
    <string name="default_currency_to_use">Default currency to use in new bill</string>
    <string name="user_name">Your name</string>
    <string name="user_email">Your email</string>
    <string name="default_currency">Default currency</string>
    <string name="pref_ui_theme_light">Light</string>
    <string name="pref_ui_theme_dark">Dark</string>
    <string name="pref_ui_theme_day_night">System</string>
    <string name="pref_ui_theme_title">Theme</string>
    <string name="debtors_amount_error">Amount of debtors does not match amount of bill</string>
    <string name="absolute">Absolute</string>
    <string name="percentage">Percentage</string>
    <string name="amount_to_balance"><![CDATA[There needs to be <b>%s %s</b> balanced over all debtors]]></string>
    <string name="percentage_to_balance"><![CDATA[There needs to be <b>%s %%</b> balanced over all debtors]]></string>
    <string name="amount_to_balance_with_percentage_to_balance"><![CDATA[There needs to be <b>%s %s</b> or <b>%s %%</b> balanced over all debtors]]></string>
    <string name="nothing_to_balance"><![CDATA[There needs nothing to be balanced]]></string>
    <string name="change_amount">Change amount</string>
    <string name="done">Done</string>
    <string name="amount_can_not_empty">Amount can not be empty</string>
    <string name="fill_up">Fill up</string>
    <string name="you_added_new_bill">You added a new bill. Do you want to share the new bill with other members of the group?</string>
    <string name="need_to_load_groups">Need to load groups before saving this group</string>
    <string name="group_exists_already">A Group with this name already exists</string>
    <string name="database_error">Could not merge groups. Database version does not match. Make sure SplitBills is upgraded to to most recent version.</string>
    <string name="member_spent">%s spent a total of %s %s</string>
    <string name="group_spent">%s spent a total of %s %s</string>
    <string name="menu_bills_add_member">Add member</string>
    <string name="show_share_group_dialog_summary">If enabled, shows a dialog after adding a bill where you are asked if you want to share the group</string>
    <string name="show_share_group_dialog_title">Show share group dialog</string>
    <string name="do_not_ask_again">Do not ask again</string>
</resources>
