<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="Default Name"
        app:key="user_name"
        app:summary="@string/your_real_name"
        app:title="@string/user_name" />

    <EditTextPreference
        android:defaultValue="default@splitbills.org"
        app:key="user_email"
        app:summary="@string/your_email_address"
        app:title="@string/user_email" />

    <ListPreference
        app:key="currency_code"
        app:summary="@string/default_currency_to_use"
        app:title="@string/default_currency" />

    <ListPreference
        app:defaultValue="day_night"
        app:entries="@array/pref_themes"
        app:entryValues="@array/pref_themes_values"
        app:key="theme"
        app:title="@string/pref_ui_theme_title"
        app:useSimpleSummaryProvider="true" />

    <CheckBoxPreference
        app:key="show_share_group_dialog"
        android:summary="@string/show_share_group_dialog_summary"
        android:title="@string/show_share_group_dialog_title"
        android:defaultValue="true"/>

</androidx.preference.PreferenceScreen>