<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="org.weilbach.splitbills.addeditgroup.AddEditGroupViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/frag_add_edit_group_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">
        <!--android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/group_name"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/frag_add_edit_group_edit_text_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/enter_group_name_hint"
            android:inputType="textCapWords"
            android:text="@={viewmodel.name}" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/group_members"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/frag_add_edit_group_button_add_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:onClick="@{() -> viewmodel.addMember()}"
            android:text="@string/add_group_member" />

        <ListView
            android:id="@+id/members_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            app:items="@{viewmodel.memberItems}">

        </ListView>

        <Button
            android:id="@+id/frag_add_edit_group_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:onClick="@{() -> viewmodel.saveGroup()}"
            android:text="@string/save" />
    </LinearLayout>
</layout>